libqt6c/src/libqprocess.hpp

typedef struct QProcess QProcess;
typedef struct QProcessEnvironment QProcessEnvironment;
QProcessEnvironment* QProcessEnvironment_new();
QProcessEnvironment* QProcessEnvironment_new2(int param1);
QProcessEnvironment* QProcessEnvironment_new3(const QProcessEnvironment* other);
void QProcessEnvironment_OperatorAssign(QProcessEnvironment* self, const QProcessEnvironment* other);
void QProcessEnvironment_Swap(QProcessEnvironment* self, QProcessEnvironment* other);
bool QProcessEnvironment_OperatorEqual(const QProcessEnvironment* self, const QProcessEnvironment* other);
bool QProcessEnvironment_OperatorNotEqual(const QProcessEnvironment* self, const QProcessEnvironment* other);
bool QProcessEnvironment_IsEmpty(const QProcessEnvironment* self);
bool QProcessEnvironment_InheritsFromParent(const QProcessEnvironment* self);
void QProcessEnvironment_Clear(QProcessEnvironment* self);
bool QProcessEnvironment_Contains(const QProcessEnvironment* self, const libqt_string name);
void QProcessEnvironment_Insert(QProcessEnvironment* self, const libqt_string name, const libqt_string value);
void QProcessEnvironment_Remove(QProcessEnvironment* self, const libqt_string name);
libqt_string QProcessEnvironment_Value(const QProcessEnvironment* self, const libqt_string name);
QStringList QProcessEnvironment_ToStringList(const QProcessEnvironment* self);
QStringList QProcessEnvironment_Keys(const QProcessEnvironment* self);
void QProcessEnvironment_Insert2(QProcessEnvironment* self, const QProcessEnvironment* e);
QProcessEnvironment* QProcessEnvironment_SystemEnvironment();
libqt_string QProcessEnvironment_Value2(const QProcessEnvironment* self, const libqt_string name, const libqt_string defaultValue);
void QProcessEnvironment_Delete(QProcessEnvironment* self);