QtBeef/src/Qt/qprocess.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QProcessEnvironment
// --------------------------------------------------------------
[CRepr]
struct QProcessEnvironment_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QProcessEnvironment_new")]
	public static extern QProcessEnvironment_Ptr QProcessEnvironment_new();
	[LinkName("QProcessEnvironment_new2")]
	public static extern QProcessEnvironment_Ptr QProcessEnvironment_new2(QProcessEnvironment_Initialization param1);
	[LinkName("QProcessEnvironment_new3")]
	public static extern QProcessEnvironment_Ptr QProcessEnvironment_new3(void** other);
	[LinkName("QProcessEnvironment_Delete")]
	public static extern void QProcessEnvironment_Delete(QProcessEnvironment_Ptr self);
	[LinkName("QProcessEnvironment_OperatorAssign")]
	public static extern void QProcessEnvironment_OperatorAssign(void* self, void** other);
	[LinkName("QProcessEnvironment_Swap")]
	public static extern void QProcessEnvironment_Swap(void* self, void** other);
	[LinkName("QProcessEnvironment_OperatorEqual")]
	public static extern bool QProcessEnvironment_OperatorEqual(void* self, void** other);
	[LinkName("QProcessEnvironment_OperatorNotEqual")]
	public static extern bool QProcessEnvironment_OperatorNotEqual(void* self, void** other);
	[LinkName("QProcessEnvironment_IsEmpty")]
	public static extern bool QProcessEnvironment_IsEmpty(void* self);
	[LinkName("QProcessEnvironment_InheritsFromParent")]
	public static extern bool QProcessEnvironment_InheritsFromParent(void* self);
	[LinkName("QProcessEnvironment_Clear")]
	public static extern void QProcessEnvironment_Clear(void* self);
	[LinkName("QProcessEnvironment_Contains")]
	public static extern bool QProcessEnvironment_Contains(void* self, libqt_string name);
	[LinkName("QProcessEnvironment_Insert")]
	public static extern void QProcessEnvironment_Insert(void* self, libqt_string name, libqt_string value);
	[LinkName("QProcessEnvironment_Remove")]
	public static extern void QProcessEnvironment_Remove(void* self, libqt_string name);
	[LinkName("QProcessEnvironment_Value")]
	public static extern libqt_string QProcessEnvironment_Value(void* self, libqt_string name);
	[LinkName("QProcessEnvironment_ToStringList")]
	public static extern void* QProcessEnvironment_ToStringList(void* self);
	[LinkName("QProcessEnvironment_Keys")]
	public static extern void* QProcessEnvironment_Keys(void* self);
	[LinkName("QProcessEnvironment_Insert2")]
	public static extern void QProcessEnvironment_Insert2(void* self, void** e);
	[LinkName("QProcessEnvironment_SystemEnvironment")]
	public static extern void* QProcessEnvironment_SystemEnvironment();
	[LinkName("QProcessEnvironment_Value2")]
	public static extern libqt_string QProcessEnvironment_Value2(void* self, libqt_string name, libqt_string defaultValue);
}
class QProcessEnvironment : IQProcessEnvironment
{
	private QProcessEnvironment_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QProcessEnvironment_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QProcessEnvironment_new();
	}
	public this(QProcessEnvironment_Initialization param1)
	{
		this.ptr = CQt.QProcessEnvironment_new2(param1);
	}
	public this(IQProcessEnvironment other)
	{
		this.ptr = CQt.QProcessEnvironment_new3((.)other?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QProcessEnvironment_Delete(this.ptr);
	}
	public void Swap(IQProcessEnvironment other)
	{
		CQt.QProcessEnvironment_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public bool IsEmpty()
	{
		return CQt.QProcessEnvironment_IsEmpty((.)this.ptr.Ptr);
	}
	public bool InheritsFromParent()
	{
		return CQt.QProcessEnvironment_InheritsFromParent((.)this.ptr.Ptr);
	}
	public void Clear()
	{
		CQt.QProcessEnvironment_Clear((.)this.ptr.Ptr);
	}
	public bool Contains(String name)
	{
		return CQt.QProcessEnvironment_Contains((.)this.ptr.Ptr, libqt_string(name));
	}
	public void Insert(String name, String value)
	{
		CQt.QProcessEnvironment_Insert((.)this.ptr.Ptr, libqt_string(name), libqt_string(value));
	}
	public void Remove(String name)
	{
		CQt.QProcessEnvironment_Remove((.)this.ptr.Ptr, libqt_string(name));
	}
	public void Value(String outStr, String name)
	{
		CQt.QProcessEnvironment_Value((.)this.ptr.Ptr, libqt_string(name));
	}
	public void* ToStringList()
	{
		return CQt.QProcessEnvironment_ToStringList((.)this.ptr.Ptr);
	}
	public void* Keys()
	{
		return CQt.QProcessEnvironment_Keys((.)this.ptr.Ptr);
	}
	public void Insert2(IQProcessEnvironment e)
	{
		CQt.QProcessEnvironment_Insert2((.)this.ptr.Ptr, (.)e?.ObjectPtr);
	}
	public QProcessEnvironment_Ptr SystemEnvironment()
	{
		return QProcessEnvironment_Ptr(CQt.QProcessEnvironment_SystemEnvironment());
	}
	public void Value2(String outStr, String name, String defaultValue)
	{
		CQt.QProcessEnvironment_Value2((.)this.ptr.Ptr, libqt_string(name), libqt_string(defaultValue));
	}
}
interface IQProcessEnvironment : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QProcess
// --------------------------------------------------------------
[CRepr]
struct QProcess_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
